Nov 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added protocol 60 for RTCW 1.4 to preferences
- added -lncurses to readline check

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Update QW master list, remove non-working and add QuakeForge's.

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 5, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add parameter to play_sound to force playing even if sound is disabled.
  Used by Test buttons to Preferences - Sound page

Nov 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use gtk functions instead of spaces to make test button look nice
- update german translation

Nov 3, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add Test buttons to Preferences - Sound page

Nov 02, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix saving of player info for rune, ut2 and tribes2
- do not display a single slash when model and skin are empty

Nov 2, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add gametype decode for instaunlagged, instagibplus, beryllium, excessive,
  q3f, q3f2

Nov 1, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add gametype decode for arena and cpma
- Fix for find_file_in_path to not append / if directory is blank.  Caused
  more and more beginning /'s in game command line each time you pressed 
  enter in the field.

Oct 31, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- remove workaround for unreal to use gps for lan broadcasting, this is no
  longer necessary with qstat 2.5c

Oct 30, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Modify game command entry field to expand command line into full path if
  command is in the path.  Also executes guess_dir

Oct 30, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix some memleaks
- update german translation

Oct 29, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Fixup master_check_master_addr_prefix