@@ -1,3 +1,7 @@
+Nov 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- make cl_punkbuster method usable for any game, make it configurable for wolf
+- use protocol 60 by default for RTCW
+
 Nov 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - added protocol 60 for RTCW 1.4 to preferences
 - added -lncurses to readline check
